bk_ida/gccida/c0/find_split_point
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3382:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v15; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3386:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // [rsp+1Ch] [rbp-174h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3389:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v23; // [rsp+3Ch] [rbp-154h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3394:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+E4h] [rbp-ACh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3397:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+FCh] [rbp-94h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3419:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+16Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3420:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+16Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3462:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3462:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3488:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)( *splitd)[1] == const_int_rtx[64] ) 
         ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3491:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3491:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3514:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)inner)] != MODE_PARTIAL_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3515:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( **( _DWORD **)&x[1])] != MODE_PARTIAL_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3598:24: error: use of undeclared identifier 'machine_mode'
|| memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), x->fld[0].rtx) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3598:39: error: expected expression
|| memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), x->fld[0].rtx) ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3615:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/combine.c:3615:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_split_point/src/obj/combine.o] Error 1
